# metafs-core-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  filemapping.example.json
src/: main.rs  mappings.proto  mappings2.proto
